[gd_scene load_steps=19 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Art/PCs1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Camera2D.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sounds/SoundFiles/Wang/death2.wav" type="AudioStream" id=4]
[ext_resource path="res://godotIcon.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Blur.gd" type="Script" id=6]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=7]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4.51507, 5.39089 )

[sub_resource type="Animation" id=2]
resource_name = "SceneTransition"
length = 0.4
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath("ScreenBlocker:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScreenBlocker:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;
render_mode unshaded;

uniform int blurSize : hint_range(0,30); 

void fragment() 
{
COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, float(blurSize)/10.0); 
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blurSize = 20

[sub_resource type="Animation" id=5]
resource_name = "IdleDown"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=6]
resource_name = "IdleRight"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=7]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=8]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 180.0, 0.0 ]
}

[sub_resource type="Animation" id=9]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 2, 0 ]
}

[sub_resource type="Animation" id=10]
resource_name = "WalkRight"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 6, 7 ]
}

[sub_resource type="Animation" id=11]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 3, 4, 3 ]
}

[node name="Player" type="KinematicBody2D" groups=[
"Player",
]]
scale = Vector2( 0.8, 0.8 )
z_index = 2
collision_layer = 2
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.418457, 47.8312 )
scale = Vector2( 3.07742, 1.55583 )
shape = SubResource( 1 )

[node name="Camera2D" parent="." instance=ExtResource( 3 )]

[node name="death2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
pause_mode = 2

[node name="SceneTransition" type="AnimationPlayer" parent="CanvasLayer"]
anims/SceneTransition = SubResource( 2 )

[node name="ScreenBlocker" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 5.96046e-008 )
position = Vector2( 553.168, 316.428 )
scale = Vector2( 18.2865, 10.8884 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Blur" type="ColorRect" parent="CanvasLayer"]
visible = false
material = SubResource( 4 )
margin_right = 1056.0
margin_bottom = 654.0
mouse_filter = 2
script = ExtResource( 6 )

[node name="PauseMenu" type="Panel" parent="CanvasLayer"]
visible = false
margin_left = 442.0
margin_top = 231.0
margin_right = 671.0
margin_bottom = 400.0
script = ExtResource( 7 )

[node name="ResumeButton" type="Button" parent="CanvasLayer/PauseMenu"]
margin_left = 77.0
margin_top = 47.0
margin_right = 154.0
margin_bottom = 73.0
text = "Resume"

[node name="SettingsButton" type="Button" parent="CanvasLayer/PauseMenu"]
margin_left = 77.0
margin_top = 75.0
margin_right = 154.0
margin_bottom = 101.0
text = "Settings"

[node name="ExitButton" type="Button" parent="CanvasLayer/PauseMenu"]
margin_left = 77.0
margin_top = 104.0
margin_right = 154.0
margin_bottom = 130.0
text = "Exit"

[node name="ExitConfirmation" type="Panel" parent="CanvasLayer/PauseMenu/ExitButton"]
visible = false
margin_left = -77.0
margin_top = -104.0
margin_right = 153.0
margin_bottom = 67.0

[node name="ConfirmationText" type="Label" parent="CanvasLayer/PauseMenu/ExitButton/ExitConfirmation"]
margin_top = 49.0
margin_right = 230.0
margin_bottom = 80.0
text = "Exiting will lose all unsaved progress!"
align = 1
autowrap = true

[node name="YesExit" type="Button" parent="CanvasLayer/PauseMenu/ExitButton/ExitConfirmation"]
modulate = Color( 1, 0.140625, 0.140625, 1 )
margin_left = 49.0
margin_top = 99.0
margin_right = 84.0
margin_bottom = 119.0
text = "Exit"

[node name="NoExit" type="Button" parent="CanvasLayer/PauseMenu/ExitButton/ExitConfirmation"]
margin_left = 128.0
margin_top = 99.0
margin_right = 182.0
margin_bottom = 119.0
text = "Return"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/IdleDown = SubResource( 5 )
anims/IdleRight = SubResource( 6 )
anims/IdleUp = SubResource( 7 )
anims/SpawnAnimation = SubResource( 8 )
anims/WalkDown = SubResource( 9 )
anims/WalkRight = SubResource( 10 )
anims/WalkUp = SubResource( 11 )

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color( 0.8, 0.8, 0.8, 1 )

[connection signal="animation_finished" from="CanvasLayer/SceneTransition" to="." method="_on_SceneTransition_animation_finished"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ResumeButton" to="CanvasLayer/PauseMenu" method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ExitButton" to="CanvasLayer/PauseMenu" method="_on_ExitButton_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ExitButton/ExitConfirmation/YesExit" to="CanvasLayer/PauseMenu" method="_on_YesExit_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/ExitButton/ExitConfirmation/NoExit" to="CanvasLayer/PauseMenu" method="_on_NoExit_pressed"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
